<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.objecthunter</groupId>
    <artifactId>exp4j</artifactId>
    <version>1.0-riddler</version>
    <name>exp4j</name>
    <description>A fork of the original exp4j. A simple mathematical expression
                 evaluator for java.</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <url>https://redmine.riddler.com.ar/projects/exp4j</url>
    <issueManagement>
        <url>https://redmine.riddler.com.ar/projects/exp4j/issues</url>
        <system>Redmine</system>
    </issueManagement>
    <mailingLists>
        <mailingList>
            <name>exp4j Forum</name>
            <archive>https://redmine.riddler.com.ar/projects/exp4j/boards</archive>
        </mailingList>
    </mailingLists>
    <developers>
        <developer>
            <name>Federico Vera</name>
            <email>fede@riddler.com.ar</email>
            <url>https://gitlab.com/fedevera</url>
            <organizationUrl>https://www.riddler.com.ar</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>fas</id>
            <name>frank</name>
            <email>frank.asseg@objecthunter.net</email>
            <url>http://www.objecthunter.net/</url>
            <organizationUrl>http://www.objecthunter.net</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>Leo Gutiérrez Ramírez</name>
            <url>https://github.com/leogtzr</url>
            <email>leogutierrezramirez@gmail.com</email>
            <roles>
                <role>developer</role>
            </roles>
        </contributor>
        <contributor>
            <name>Bartosz Firyn</name>
            <url>https://github.com/sarxos</url>
            <roles>
                <role>developer</role>
            </roles>
        </contributor>
        <contributor>
            <name>Sergey Solovyev</name>
            <email>se.solovyev@gmail.com</email>
            <url>http://se.solovyev.org/</url>
            <roles>
                <role>developer</role>
            </roles>
        </contributor>
    </contributors>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.8</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <debug>true</debug>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>
